remake roles, delete specific permissions and publish be on ip address instead of localhost, also add some changes to cors
