# src/main/java/cz/fel/cvut/beevidence_and_cyber/dto/PermissionDto.java
@@ -1,11 +1,0 @@
-package cz.fel.cvut.beevidence_and_cyber.dto;
-
-import java.util.UUID;
-
-public record PermissionDto(
-        UUID id,
-        String code,
-        String name,
-        String description
-) {
-}
