# src/main/java/cz/fel/cvut/beevidence_and_cyber/dto/RoleDto.java
@@ -1,6 +1,5 @@
 package cz.fel.cvut.beevidence_and_cyber.dto;
 
-import java.util.List;
 import java.util.UUID;
 
 public record RoleDto(
@@ -8,7 +7,6 @@ public record RoleDto(
         String code,
         String name,
         String description,
-        boolean system,
-        List<PermissionDto> permissions
+        boolean system
 ) {
 }
